# hackathon2024

./: .gitignore  alembic.ini  asdfgf.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 481d2b9416cd_add_users_table.py  4ba0c3464647_add_fuel_table.py  c3104d14e561_add_cars_and_logs_table.py  ca72df19df31_add_maintenance_model.py  e4222f79264a_add_satisfaction_field.py
src/: config.py  database.py  exceptions.py  main.py  models.py
src/auth/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/cars/: models.py  router.py  schemas.py  service.py
src/frontend/: router.py
templates/: index.html  login.html  main.css  script.js  style.css
templates/login/: index.html
